# C-RV32I-EMU

./: CMakeLists.txt
emu/: CMakeLists.txt
emu/include/: emu.h
emu/src/: emu.c
examples/demo_1/: CMakeLists.txt  main.c
